# fastapi-app

./: docker-compose.yml  main.py  pyproject.toml  settings.py
api/: handlers.py  models.py
db/: dals.py  models.py  session.py
migrations/: env.py
migrations/versions/: 2025_04_01_2155-4f6ceabb9157_create_table_for_users.py
